perf: keep definition index deterministic and precise